--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ services:
   - docker
 
 before_install:
-  - docker build -t testecx14/docker-react -f Dockerfile.dev .
+  - docker build -t ddremmerd/docker-react -f Dockerfile.dev .
 
 
 script:
-  - docker run -e CI=true testecx14/docker-react npm run test
+  - docker run -e CI=true ddremmerd/docker-react npm run test
